--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "codicastudio/messenger",
+    "name": "codica-studio/messenger",
     "description": "A random Codica Studio package.",
     "keywords": [
         ""
     ],
-    "homepage": "https://github.com/codicastudio/messenger",
+    "homepage": "https://github.com/codica-studio/messenger",
     "license": "MIT",
     "authors": [
         {
